# heres

./: .env.example  .env.vercel.example  .gitignore  ARCHITECTURE.md  CRE_README.md  E2E_TEST_REPORT.md  PROJECT_STRUCTURE.md  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  twa-manifest.json
app/: README.md  env.d.ts  globals.css  layout.tsx  page.tsx  providers.tsx
components/: AsciiCapsule.tsx  CapsuleMediaBlock.tsx  Footer.tsx  HeresPromoReel.tsx  HeroCapsuleVideo.tsx  Navbar.tsx  ServiceWorkerRegister.tsx
config/: blockchain.ts  injective.ts  solana.ts
constants/: index.ts  promoSpec.ts
contracts/: README.md
cre-workflow/: .gitignore  go.mod  go.sum
heres-cre/: README.md  project.yaml
heres_program/: Anchor.toml  Cargo.toml
heres_program/programs/heres_program/: Cargo.toml
heres_program/programs/heres_program/src/: lib.rs
idl/: HeresProgram.json
inevm-deploy/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
lib/: README.md  capsule-registry.ts  ccip.ts  crank.ts  helius.ts  mobile-tx.ts  mobile.ts  program.ts  solana.ts  tee.ts
mobile-android/: README.md  settings.gradle.kts
public/: manifest.json  service-worker.js
scripts/: check_fee_config.ts  e2e-full-flow.mjs  init-fee-config.ts  reset_capsules.ts  setup_cre.mjs  test-base-intent-undelegate.mjs  test-capsule-e2e.ts  test-er-delegation.mjs  update_fee_config.ts  verify_complete_flow.ts  verify_flow.ts
tests/: cre-auth.test.mts
types/: index.ts  solana-wallet-adapter-wallets.d.ts
(+81 files in other folders)
